--- a/burger-queen/public/index.html
+++ b/burger-queen/public/index.html
@@ -30,6 +30,7 @@
     <div id="root"></div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-firestore.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
